--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "clarifai": "^2.7.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-particles-js": "^2.2.0",
+    "react-scripts": "1.1.4",
+    "react-tilt": "^0.1.4",
+    "tachyons": "^4.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
